<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.CarFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilBrand"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/tilModel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietBrand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/brand"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilModel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/tilYear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilBrand">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/model"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilYear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/tilPower"
        app:layout_constraintEnd_toStartOf="@+id/tilPrice"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilModel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/year_"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tilYear"
        app:layout_constraintTop_toTopOf="@+id/tilYear">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price_"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPower"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/transmissionLabelTextView"
        app:layout_constraintEnd_toStartOf="@+id/tilCapacity"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilYear">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietPower"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/power_"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCapacity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tilPower"
        app:layout_constraintTop_toTopOf="@+id/tilPower">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietCapacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/engine_capacity"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/transmissionLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="4dp"
        android:text="@string/transmission_"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/driveLabelTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilPower" />

    <Spinner
        android:id="@+id/transmissionSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/transmissionLabelTextView"
        app:layout_constraintStart_toEndOf="@+id/transmissionLabelTextView"
        app:layout_constraintTop_toTopOf="@+id/transmissionLabelTextView"
         />

    <TextView
        android:id="@+id/driveLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/drive_"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transmissionLabelTextView" />

    <Spinner
        android:id="@+id/driveSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/driveLabelTextView"
        app:layout_constraintStart_toEndOf="@+id/driveLabelTextView"
        app:layout_constraintTop_toTopOf="@+id/driveLabelTextView"
         />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/driveLabelTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>